SAN-608 PV value in Account Information for referrals orders

--- a/view/adminhtml/templates/sales/order/view/info.phtml
+++ b/view/adminhtml/templates/sales/order/view/info.phtml
@@ -18,6 +18,10 @@
         <td><?= $block->getUplineMlmId() ?></td>
     </tr>
     <tr>
+        <th><?= $block->escapeHtml(__('Sale PV')) ?></th>
+        <td><?= $block->getSalePv() ?></td>
+    </tr>
+    <tr>
         <th><?= $block->escapeHtml(__('Bonus amount')) ?></th>
         <td><?= $block->getAmountTotal() ?></td>
     </tr>
